--- a/medicare-webapp/src/components/App.css
+++ b/medicare-webapp/src/components/App.css
@@ -2,49 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.nav-link.active{
-  background:turquoise;
-  color: white;
-}
-.nav-link{
-  color: white;
-}
-
 .footer{
   position: fixed;
   bottom: 0;
@@ -52,7 +9,7 @@
   left: 0;
   width: 100%;
   overflow: hidden;
-  height: 25px;
+  z-index: 100;
 }
 
 .header {
@@ -64,14 +21,10 @@
   z-index: 100;
 }
 
-.middle {
-  width: 100%;
-  left:0;
-  right: 0;
-  overflow: auto;
+.background {
+  background-image: url('https://www.toptal.com/designers/subtlepatterns/patterns/contemporary_china.png');
+  min-height: 100vh;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
-
-/* #navcontent {
-  position: relative;
-  z-index: 1000;
-} */
